# vegas

./: .gitignore  Board.cc  Board.h  CMakeLists.txt  Dice_Main.cc  Die.cc  Die.h  LICENSE  Player.cc  Player.h  README.md  vegas  vegas_linux
tests/: test_board.cpp  test_die.cpp  test_integration.cpp  test_player.cpp
